<resources>
    <string name="app_name">powernet</string>
    <string name="power_wall">Power Wall</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="dish_washer">Dish Washer</string>
    <string name="dryer">Clothes Dryer</string>
    <string name="washer">Clothes Washer</string>
    <string name="ac">Air Conditioner</string>
    <string name="oven">Stove Oven</string>
    <string name="stove">Stove Oven Exhaust</string>
    <string name="water_heater">Water Heater</string>
    <string name="solar_panels">Solar Panels</string>
    <string name="lights">Lights</string>
    <string name="about">About</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="power_systems">Power Systems</string>
    <string name="laundry">Laundry</string>
    <string name="kitchen">Kitchen</string>
    <string name="microwave">Microwave</string>

    <string-array name="appliance_status">
        <item> ON </item>
        <item> OFF </item>
    </string-array>

</resources>
