<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        >
        <item android:title="@string/kitchen">
            <menu>
                <group  android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_fragment_one"
                        android:icon="@drawable/refrigerator_menu_2"
                        android:title="@string/refrigerator"
                        />
                    <item
                        android:id="@+id/nav_fragment_three"
                        android:icon="@drawable/dish_washer_menu"
                        android:title="@string/dish_washer"
                        />
                    <item
                        android:id="@+id/nav_fragment_seven"
                        android:icon="@drawable/cook_top_menu"
                        android:title="@string/oven"
                        />
                    <item
                        android:id="@+id/nav_fragment_eight"
                        android:icon="@drawable/exhaust_menu"
                        android:title="@string/stove"
                        />
                    <item
                        android:id="@+id/nav_microwave"
                        android:icon="@drawable/microwave_menu"
                        android:title="@string/microwave"
                        />
                </group>
            </menu>
        </item>

        <item
            android:title="@string/laundry">
            <menu>
                <group  android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_fragment_four"
                        android:icon="@drawable/dryer_machine_menu"
                        android:title="@string/dryer"
                        />
                    <item
                        android:id="@+id/nav_fragment_five"
                        android:icon="@drawable/dryer_machine_menu"
                        android:title="@string/washer"
                        />

                </group>
            </menu>

        </item>


        <item
            android:title="@string/power_systems">
            <menu>
                <group  android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_fragment_two"
                        android:icon="@drawable/storage_menu"
                        android:title="@string/power_wall"
                        />
                    <item
                        android:id="@+id/nav_fragment_six"
                        android:icon="@drawable/air_conditioner_menu"
                        android:title="@string/ac"
                        />
                    <item
                        android:id="@+id/nav_fragment_nine"
                        android:icon="@drawable/water_heater"
                        android:title="@string/water_heater"
                        />
                    <item
                        android:id="@+id/nav_fragment_ten"
                        android:icon="@drawable/solar_panel_menu"
                        android:title="@string/solar_panels"
                        />
                    <item
                        android:id="@+id/nav_fragment_eleven"
                        android:icon="@drawable/light_menu"
                        android:title="@string/lights"
                        />


                </group>
            </menu>

        </item>


        <item
            android:id="@+id/nav_fragment_twelve"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/about"
            />
    </group>

</menu>